normalize line endings to pass all tests